@@ -1,7 +1,7 @@
 # Extended Module Player Makefile.rules.in
-# $Id: Makefile.rules.in,v 1.18 2007-08-13 20:47:19 cmatsuoka Exp $
+# $Id: Makefile.rules.in,v 1.19 2007-08-20 22:02:34 cmatsuoka Exp $
 
-VERSION	= 2.2.0-pre3
+VERSION	= 2.2.0-pre4
 DATE	= Mon Aug 13 13:47:04 BRT 2007
 
 DESTDIR	=
