@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.44 2007-08-14 00:03:17 cmatsuoka Exp $
+$Id: ChangeLog,v 1.45 2007-08-20 22:02:34 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -29,6 +29,7 @@ Stable versions
 	- fixed MDL note event keyoff (gothlord.mdl plays better)
 	- fixed XM and MDL sample loop size
 	- fixed LIQ effects and 16-bit sample loading
+	- fixed S3M pan settings
 	- fixed issues with OpenBSD
 	- fixed issues with 64-bit machines
 	- fixed loading of big-endian 16-bit samples
